Move the javascript needed for the file input out of the clearable_file_input template
* Move it into a javascript block in each form template for now.

--- a/comicsdb/templates/comicsdb/creator_form.html
+++ b/comicsdb/templates/comicsdb/creator_form.html
@@ -38,3 +38,15 @@
     </div>
   </form>
 {% endblock %}
+
+{% block js %}
+<script>
+var file = document.getElementById("file");
+file.onchange = function(){
+    if(file.files.length > 0)
+    {
+      document.getElementById('filename').innerHTML = file.files[0].name;
+    }
+};
+</script>
+{% endblock %}
