Use the FilteredSelectMultiple widget on the Credits form

--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -5,6 +5,7 @@
 
 {% block comic_content %}
   <h1 class="title">Credits Form</h1>
+  {{ form.media }}
   <form method="post">
   {% csrf_token %}
     {% if form.errors %}
