--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -11,9 +11,7 @@
       <div class="level-left">
         <div class="level-item">
           <p class="subtitle is-5">
-            {% with total=creator_list.count %}
-              <strong>{{ total }}</strong> Creator{{ total|pluralize }}
-            {% endwith %}
+              <strong>{{ count }}</strong> Creator{{ count|pluralize }}
           </p>
         </div>
         <div class="level-item">
