Use the Arc total count instead of the pagination count

--- a/comicsdb/templates/comicsdb/arc_list.html
+++ b/comicsdb/templates/comicsdb/arc_list.html
@@ -11,9 +11,7 @@
       <div class="level-left">
         <div class="level-item">
           <p class="subtitle is-5">
-            {% with total=arc_list.count %}
-              <strong>{{ total }}</strong> Story Arc{{ total|pluralize }}
-            {% endwith %}
+            <strong>{{ count }}</strong> Story Arc{{ count|pluralize }}
           </p>
         </div>
         <div class="level-item">
