--- a/comicsdb/templates/comicsdb/character_list.html
+++ b/comicsdb/templates/comicsdb/character_list.html
@@ -11,9 +11,7 @@
       <div class="level-left">
         <div class="level-item">
           <p class="subtitle is-5">
-            {% with total=character_list.count %}
-              <strong>{{ total }}</strong> Character{{ total|pluralize }}
-            {% endwith %}
+            <strong>{{ count }}</strong> Character{{ count|pluralize }}
           </p>
         </div>
         <div class="level-item">
