--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -11,9 +11,7 @@
       <div class="level-left">
         <div class="level-item">
           <p class="subtitle is-5">
-            {% with total=team_list.count %}
-              <strong>{{ total }}</strong> Story Team{{ total|pluralize }}
-            {% endwith %}
+            <strong>{{ count }}</strong> Team{{ count|pluralize }}
           </p>
         </div>
         <div class="level-item">
