Combine the creator's name into one field, and remove the separate fields

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -35,7 +35,7 @@
     <div class="level-left">
       <div class="level-item">
         <div>
-          <p class="title">{{ creator.get_full_name }}</p>
+          <p class="title">{{ creator.name }}</p>
         </div>
       </div>
     </div>
@@ -67,10 +67,10 @@
         <figure class="image is-square">
           {% if creator.image %}
             {% thumbnail creator.image "256x256" crop="center" as im %}
-              <img src="{{ im.url }}" alt = "{{ creator.get_full_name }}">
+              <img src="{{ im.url }}" alt = "{{ creator.name }}">
             {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ creator.get_full_name }}">
+            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ creator.name }}">
           {% endif %}
         </figure>
       </div>
