--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -5,6 +5,31 @@
 {% block page-title %}Series Detail{% endblock page-title %}
 
 {% block comic_content %}
+  <!-- series nav -->
+  <nav class="level">
+    <div class="level-left">
+      <div class="level-item">
+        {% if navigation.previous_series %}
+          <a class="button is-link" href="{% url 'series:detail' navigation.previous_series.slug %}">
+            &laquo; Previous Series
+          </a>
+        {% else %}
+            <a class="button" disabled>&laquo; Previous Series</a>
+        {% endif %}
+      </div>
+      <div class="level-item">
+        {% if navigation.next_series %}
+          <a class="button is-link" href="{% url 'series:detail' navigation.next_series.slug %}">
+            Next Series &raquo;
+          </a>
+        {% else %}
+          <a class="button" disabled>Next Series &raquo;</a>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
+  <!--  end series nav -->
+
   <!-- page header -->
   <nav class="level">
     <div class="level-left">
