--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -5,6 +5,31 @@
 {% block page-title %}Arc Detail{% endblock page-title %}
 
 {% block comic_content %}
+  <!-- arc nav -->
+  <nav class="level">
+    <div class="level-left">
+      <div class="level-item">
+        {% if navigation.previous_arc %}
+          <a class="button is-link" href="{% url 'arc:detail' navigation.previous_arc.slug %}">
+            &laquo; Previous Arc
+          </a>
+        {% else %}
+            <a class="button" disabled>&laquo; Previous Arc</a>
+        {% endif %}
+      </div>
+      <div class="level-item">
+        {% if navigation.next_arc %}
+          <a class="button is-link" href="{% url 'arc:detail' navigation.next_arc.slug %}">
+            Next Arc &raquo;
+          </a>
+        {% else %}
+          <a class="button" disabled>Next Arc &raquo;</a>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
+  <!--  end arc nav -->
+
   <!-- page header -->
   <nav class="level">
     <div class="level-left">
