--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,17 @@
           <a class="navbar-item" href="{% url 'character:list' page=1 %}">Characters</a>
           <a class="navbar-item" href="{% url 'arc:list' page=1 %}">Story Arcs</a>
           <a class="navbar-item" href="{% url 'team:list' page=1 %}">Teams</a>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">More</a>
+            <div class="navbar-dropdown">
+              <a class="navbar-item">Guidelines</a>
+              <a class="navbar-item">API Documentation</a>
+              <a class="navbar-item">About</a>
+              <a class="navbar-item">Contact</a>
+              <hr class="navbar-divider">
+              <a class="navbar-item">Report an issue</a>
+            </div>
+          </div>
         </div>
         <div class="navbar-end">
           {% if user.is_authenticated %}
