Rework the templates a bit for the flatpages

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,50 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body class="has-navbar-fixed-top">
-
-    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="{% url 'home' %}">
-          <img src="{% static 'site/img/atomic-symbol.png' %}" width="24" height="24">
-        </a>
-      </div>
-      <div class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item" href="{% url 'publisher:list' page=1 %}">Publishers</a>
-          <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
-          <a class="navbar-item" href="{% url 'issue:list' page=1 %}">Issues</a>
-          <a class="navbar-item" href="{% url 'creator:list' page=1 %}">Creators</a>
-          <a class="navbar-item" href="{% url 'character:list' page=1 %}">Characters</a>
-          <a class="navbar-item" href="{% url 'arc:list' page=1 %}">Story Arcs</a>
-          <a class="navbar-item" href="{% url 'team:list' page=1 %}">Teams</a>
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">More</a>
-            <div class="navbar-dropdown">
-              <a class="navbar-item">Guidelines</a>
-              <a class="navbar-item">API Documentation</a>
-              <a class="navbar-item">About</a>
-              <a class="navbar-item">Contact</a>
-              <hr class="navbar-divider">
-              <a class="navbar-item">Report an issue</a>
-            </div>
-          </div>
-        </div>
-        <div class="navbar-end">
-          {% if user.is_authenticated %}
-            <div class="navbar-item">
-              <a class="button is-light" href="{% url 'logout' %}">Log out</a>
-            </div>
-          {% else %}
-            <div class="navbar-item">
-              <a class="button is-light" href="{% url 'signup' %}">Sign Up</a>
-            </div>
-            <div class="navbar-item">
-              <a class="button is-light" href="{% url 'login' %}">Log in</a>
-            </div>
-          {% endif %}
-        </div>
-      </div>
-    </nav>
+    {% include "navbar.html" %}
 
     {% block content %}{% endblock %}
 
