Use the paginator obj to get the total series record counts

--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -11,7 +11,7 @@
       <div class="level-left">
         <div class="level-item">
           <p class="subtitle is-5">
-            <strong>{{ count }}</strong> Series
+            <strong>{{ page_obj.paginator.count }}</strong> Series
           </p>
         </div>
         <div class="level-item">
