--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,13 +4,13 @@
         <a class="navbar-item" href="{% url 'home' %}">
           <img src="{% static 'site/img/atomic-symbol.png' %}" width="24" height="24">
         </a>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
+        <span class="navbar-burger burger" data-target="navMenu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </span>
       </div>
-      <div class="navbar-menu">
+      <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Browse</a>
@@ -50,3 +50,14 @@
         </div>
       </div>
     </nav>
+
+    <script type="text/javascript">
+      (function() {
+        var burger = document.querySelector('.burger');
+        var nav = document.querySelector('#'+burger.dataset.target);
+        burger.addEventListener('click', function(){
+          burger.classList.toggle('is-active');
+          nav.classList.toggle('is-active');
+        });
+      })();
+    </script>
