Fix a minor typo in the creator_detail template

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -106,7 +106,7 @@
     <!-- misc info -->
     <div class="column is-one-fifth">
       <div class="box">
-        <h1 class="title is-6">Issue Details</h1>
+        <h1 class="title is-6">Creator Details</h1>
         {% if creator.birth %}
           <p><b>Birth:</b> {{ creator.birth|date:"SHORT_DATE_FORMAT" }}</p>
         {% else %}
