--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,7 +30,7 @@
               <a class="navbar-item" href="/pages/contribute/">How To Contribute FAQ</a>
               <a class="navbar-item" href="/docs/">API Docs</a>
               <hr class="navbar-divider">
-              <a class="navbar-item">Report an issue</a>
+              <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">Report an issue</a>
             </div>
           </div>
         </div>
