Add view allowing users to contact us.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,6 +30,7 @@
               <a class="navbar-item" href="/pages/contribute/">How To Contribute FAQ</a>
               <a class="navbar-item" href="/docs/">API Docs</a>
               <hr class="navbar-divider">
+              <a class="navbar-item" href="{% url 'contact:email' %}">Contact Us</a>
               <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">Report an issue</a>
             </div>
           </div>
