Add a link in the navbar to the Editing Guidelines

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,7 @@
             <a class="navbar-link">More</a>
             <div class="navbar-dropdown">
               <a class="navbar-item" href="/pages/contribute/">How To Contribute FAQ</a>
+              <a class="navbar-item" href="/pages/guidelines/editing/">Editing Guidelines</a>
               <a class="navbar-item" href="/docs/">API Docs</a>
               <hr class="navbar-divider">
               <a class="navbar-item" href="{% url 'contact:email' %}">Contact Us</a>
